# SVGen

./: .gitignore  Cargo.toml  README.md
src/: algo.rs  color_reducer.rs  constants.rs  lib.rs  parsers.rs  path_optimizer.rs  path_simplify.rs  polygon_simplifier.rs  quantizer.rs  structs.rs  utils.rs
src/curve_fit_nd/: curve_fit_from_polys.rs  curve_fit_single.rs  mod.rs
src/min_heap/: mod.rs
src/vec2/: mod.rs
tests/: decode_to_svg.rs
