[package]
name = "svgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "svgen"
path = "src/lib.rs"

[dependencies]
flate2 = "1.0.35"
imageproc = "0.25.0"
svg = "0.18.0"
wasm-bindgen = "0.2.100"
image = { version = "0.25.5", default-features = false, features = [
    "rayon",
    "png",
    "webp",
    "jpeg",
    "bmp",
] }
log = "0.4.25"

[dev-dependencies]
env_logger = "0.11.6"
