[package]
name = "svgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "svgen"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
svg = "0.18.0"
wasm-bindgen = "0.2.100"
image = { version = "0.25.6", default-features = false, features = [
    "rayon",
    "png",
    "webp",
    "jpeg",
    "bmp",
] }
log = "0.4.27"

[dev-dependencies]
env_logger = "0.11.7"
wasm-bindgen-test = "0.3.50"

[profile.release]
lto = true
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[[test]]
name = "decode_to_svg"
harness = false
